Add changes for Sub4
Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

--- a/housekeeping/docker/env-release/Dockerfile
+++ b/housekeeping/docker/env-release/Dockerfile
@@ -30,7 +30,7 @@ RUN add-apt-repository \
 ENV RUST_VERSION=nightly-2021-07-26
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-toolchain ${RUST_VERSION} && \
     rustup default ${RUST_VERSION} && \
-    rustup target add wasm32-unknown-unknown --default-toolchain ${RUST_VERSION}
+    rustup target add wasm32-unknown-unknown --toolchain ${RUST_VERSION}
 RUN curl https://github.com/chevdor/subwasm/releases/download/v0.14.1/subwasm_linux_amd64_v0.14.1.deb -sSL -o subw.deb && \
     dpkg -i subw.deb && rm subw.deb
 
