Add changes for Sub4
Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

--- a/housekeeping/docker/env-release/Dockerfile
+++ b/housekeeping/docker/env-release/Dockerfile
@@ -43,6 +43,6 @@ ADD . /app
 WORKDIR /app
 ENV RUSTC_WRAPPER=sccache
 ENV CARGO_INCREMENTAL=0
-RUN rustc --version && RUSTFLAGS="$RUSTFLAGS -A warnings" cargo build --color=never --release --features "include-real-files" -- --color=never && \
+RUN rustc --version && RUSTFLAGS="$RUSTFLAGS -A warnings" cargo build --color never --release --features "include-real-files" && \
     cargo test --release
 WORKDIR /
