--- a/pallets/trustless-eth-bridge/dispatch/Cargo.toml
+++ b/pallets/trustless-eth-bridge/dispatch/Cargo.toml
@@ -24,6 +24,7 @@ sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkado
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 
 snowbridge-core = { path = "../../../primitives/core", default-features = false }
+snowbridge-ethereum = { path = "../../../primitives/ethereum", default-features = false }
 
 [dev-dependencies]
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
@@ -41,6 +42,7 @@ std = [
     "sp-runtime/std",
     "sp-std/std",
     "snowbridge-core/std",
+    "snowbridge-ethereum/std",
 ]
 runtime-benchmarks = [
     "snowbridge-core/runtime-benchmarks",
