--- a/pallets/ceres-liquidity-locker/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/Cargo.toml
@@ -18,6 +18,7 @@ frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
+#pool-xyk = {path = "../pool-xyk", default-features = false}
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
