--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -110,7 +110,7 @@ tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 traits = { version = "0.4", package = "orml-traits", default-features = false }
 
 [dev-dependencies]
-framenode-chain-spec = { path = "../node/chain_spec", features = ["test"] }
+framenode-chain-spec = { path = "../node/chain_spec", features = ["test", "private-net"] }
 
 [features]
 default = ["std"]
