--- a/pallets/assets/runtime-api/Cargo.toml
+++ b/pallets/assets/runtime-api/Cargo.toml
@@ -8,18 +8,26 @@ homepage = 'https://sora.org'
 repository = 'https://github.com/sora-xor/sora2-network'
 
 [dependencies]
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = [
+serde = { version = "1.0.130", optional = true, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
+scale-info = { version = "1.0.0", default-features = false, features = [
     "derive",
 ] }
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-common = { path = "../../../common", default-features = false }
+sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+common = { path = "../../../common", default-features = false}
 
 [dev-dependencies]
 serde_json = "1.0.41"
 
 [features]
 default = ["std"]
-std = ["serde", "codec/std", "sp-api/std", "sp-runtime/std", "sp-std/std"]
+std = [
+    "serde",
+    "codec/std",
+    "scale-info/std",
+    "sp-api/std",
+    "sp-runtime/std",
+    "sp-std/std",
+]
