--- a/pallets/dex-api/runtime-api/Cargo.toml
+++ b/pallets/dex-api/runtime-api/Cargo.toml
@@ -8,13 +8,14 @@ homepage = 'https://sora.org'
 repository = 'https://github.com/sora-xor/sora2-network'
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = [
-	"derive",
+codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
+scale-info = { version = "1.0.0", default-features = false, features = [
+    "derive",
 ] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
+sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 common = { path = "../../../common", default-features = false }
 
 
@@ -22,6 +23,7 @@ common = { path = "../../../common", default-features = false }
 default = ["std"]
 std = [
 	"codec/std",
+    "scale-info/std",
 	"serde",
 	"sp-api/std",
 	"sp-runtime/std",
