--- a/pallets/vested-rewards/Cargo.toml
+++ b/pallets/vested-rewards/Cargo.toml
@@ -11,32 +11,30 @@ version = '1.1.0'
 targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = [
+codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
+scale-info = { version = "1.0.0", default-features = false, features = [
     "derive",
 ] }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "55d52768", package = "orml-currencies", default-features = false }
-frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false, optional = true }
+currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false, optional = true }
 hex-literal = { version = "0.3.1", optional = true }
-serde = { version = "1.0.101", optional = true, features = [
-    "derive",
-], default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "55d52768", package = "orml-tokens", default-features = false }
-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "55d52768", package = "orml-traits", default-features = false }
+serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
+traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool", default-features = false }
-technical = { path = "../technical", optional = true, default-features = false }
+technical = { path = "../technical", optional =  true, default-features = false }
 
 [dev-dependencies]
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9"}
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
@@ -51,7 +49,7 @@ liquidity-proxy = { path = "../liquidity-proxy" }
 default = ['std']
 std = [
     'codec/std',
-    'scale-info/std',
+    "scale-info/std",
     'currencies/std',
     'frame-support/std',
     'frame-system/std',
