--- a/utils/parse/Cargo.toml
+++ b/utils/parse/Cargo.toml
@@ -12,6 +12,9 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "chain-error"] }
+scale-info = { version = "1.0.0", default-features = false, features = [
+    "derive",
+] }
 framenode-runtime = { path = "../../runtime" }
 hex = "0.4.3"
 rustc-hex = "2.1.0"
