--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,6 +163,8 @@ members = [
     "runtime",
     "common",
     "pallets/assets",
+    "pallets/ceres-liquidity-locker",
+    "pallets/ceres-liquidity-locker/testing",
     "pallets/permissions",
     "pallets/trading-pair",
     "pallets/dex-manager",
