--- a/pallets/ceres-liquidity-locker/testing/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/testing/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-description = "Pallet for CERES liquidity locker."
+description = "Crate for CERES liquidity locker testing."
 authors = ["Jovan Milosevic <jovan.milosevic@cerestoken.io>, Danijel Radulovic Ltd. <danijel.radulovic@cerestoken.io>"]
 license = "BSD-4-Clause"
 homepage = "https://cerestoken.io"
 repository = "https://github.com/sora-xor/sora2-network"
-name = "ceres-liquidity-locker"
+name = "ceres-liquidity-locker-testing"
 version = "1.0.0"
 edition = "2018"
 
@@ -16,8 +16,8 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
-assets = { path = "../assets", default-features = false }
-common = { path = "../../common", default-features = false }
+assets = { path = "../../assets", default-features = false }
+common = { path = "../../../common", default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
@@ -25,19 +25,20 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 hex-literal = "0.3.1"
 
 [dev-dependencies]
-assets = { path = "../assets" }
-common = { path = "../../common", features = ["test"] }
+assets = { path = "../../assets" }
+ceres-liquidity-locker = { path = "../." }
+common = { path = "../../../common", features = ["test"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
-dex-manager = { path = "../dex-manager", default-features = false }
+dex-manager = { path = "../../dex-manager", default-features = false }
 sp-io = { version = "3", default-features = false }
 orml-tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
 pallet-balances = { version = "3" }
-permissions = { path = "../permissions" }
-pool-xyk = { path = "../pool-xyk", default-features = false }
-pswap-distribution = { path = "../pswap-distribution" }
-technical = { path = "../technical", default-features = false }
-trading-pair = { path = "../trading-pair", default-features = false }
+permissions = { path = "../../permissions" }
+pool-xyk = { path = "../../pool-xyk", default-features = false }
+pswap-distribution = { path = "../../pswap-distribution" }
+technical = { path = "../../technical", default-features = false }
+trading-pair = { path = "../../trading-pair", default-features = false }
 
 [features]
 default = ["std"]
@@ -51,10 +52,3 @@ std = [
     "sp-runtime/std",
     "sp-std/std",
 ]
-
-runtime-benchmarks = [
-    "frame-benchmarking",
-    "frame-system/runtime-benchmarks",
-    "frame-support/runtime-benchmarks",
-]
-
