--- a/pallets/dex-api/benchmarking/Cargo.toml
+++ b/pallets/dex-api/benchmarking/Cargo.toml
@@ -32,6 +32,7 @@ multicollateral-bonding-curve-pool = { path = "../../multicollateral-bonding-cur
 hex-literal = "0.3.1"
 
 [dev-dependencies]
+ceres-liquidity-locker = { path = "../../ceres-liquidity-locker", default-features = false }
 serde = { version = "1.0.101", default-features = false, features = ["derive"] }
 sp-io = { version = "3", default-features = false }
 pallet-balances = { version = "3", default-features = false }
