--- a/pallets/price-tools/Cargo.toml
+++ b/pallets/price-tools/Cargo.toml
@@ -36,6 +36,7 @@ pool-xyk = { path = "../pool-xyk", default-features = false}
 technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
+ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
 hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
 common = { path = "../../common", features = ["test"] }
