--- a/pallets/vested-rewards/Cargo.toml
+++ b/pallets/vested-rewards/Cargo.toml
@@ -34,6 +34,7 @@ technical = { path = "../technical", optional =  true, default-features = false 
 pallet-balances = { version = "3"}
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
+ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
 dex-manager = { path = "../dex-manager" }
 permissions = { path = "../permissions" }
 trading-pair = { path = "../trading-pair" }
