--- a/pallets/ceres-liquidity-locker/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/Cargo.toml
@@ -5,7 +5,7 @@ license = "BSD-4-Clause"
 homepage = "https://cerestoken.io"
 repository = "https://github.com/sora-xor/sora2-network"
 name = "ceres-liquidity-locker"
-version = "1.0.0"
+version = "1.2.0"
 edition = "2018"
 
 [package.metadata.docs.rs]
@@ -13,7 +13,6 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
-frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
 assets = { path = "../assets", default-features = false }
@@ -21,7 +20,10 @@ common = { path = "../../common", default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
-serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
+technical = { path = "../technical", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
+permissions = { path = "../permissions", default-features = false }
+serde = { version = "1.0.101", optional = true, features = ["derive"] }
 hex-literal = "0.3.1"
 
 [dev-dependencies]
@@ -29,32 +31,29 @@ assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
+ceres-liquidity-locker = { path = ".", default-features = false }
+pallet-balances = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
 orml-tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
-pallet-balances = { version = "3" }
 permissions = { path = "../permissions" }
 pool-xyk = { path = "../pool-xyk", default-features = false }
 pswap-distribution = { path = "../pswap-distribution" }
-technical = { path = "../technical", default-features = false }
-trading-pair = { path = "../trading-pair", default-features = false }
+technical = { path = "../technical" }
+trading-pair = { path = "../trading-pair" }
+price-tools = { path = "../price-tools" }
+liquidity-proxy = { path = "../liquidity-proxy" }
 
 [features]
-default = ["std"]
+default = ['std']
 
 std = [
     "codec/std",
     "frame-support/std",
     "frame-system/std",
-    'serde/std',
+    'serde',
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
-]
-
-runtime-benchmarks = [
-    "frame-benchmarking",
-    "frame-system/runtime-benchmarks",
-    "frame-support/runtime-benchmarks",
 ]
 
