fix: tests and benchmarks after the merge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,7 +177,7 @@ members = [
     "pallets/pool-xyk",
     "pallets/rewards",
     "pallets/xor-fee",
-    "pallets/referral-system",
+    "pallets/referrals",
     "pallets/eth-bridge",
     "pallets/pswap-distribution",
     "pallets/multicollateral-bonding-curve-pool",
