Create ceres-token-locker pallet

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -26,6 +26,7 @@ assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features 
 common = { path = "../common", default-features = false }
 ceres-liquidity-locker = { path = "../pallets/ceres-liquidity-locker", default-features = false }
 ceres-liquidity-locker-benchmarking = { path = "../pallets/ceres-liquidity-locker/benchmarking", default-features = false, optional = true }
+ceres-token-locker = { path = "../pallets/ceres-token-locker", default-features = false }
 ceres-staking = { path = "../pallets/ceres-staking", default-features = false }
 dex-api = { path = "../pallets/dex-api", default-features = false }
 dex-api-benchmarking = { path = "../pallets/dex-api/benchmarking", default-features = false, optional = true }
