--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -128,6 +128,7 @@ std = [
     "common/std",
     "ceres-liquidity-locker/std",
     "ceres-staking/std",
+    "ceres-token-locker/std",
     "dex-api/std",
     "dex-manager-runtime-api/std",
     "dex-manager/std",
@@ -207,6 +208,7 @@ runtime-benchmarks = [
     "ceres-liquidity-locker-benchmarking",
     "dex-api-benchmarking",
     "ceres-staking/runtime-benchmarks",
+    "ceres-token-locker/runtime-benchmarks",
     "eth-bridge/runtime-benchmarks",
     "farming/runtime-benchmarks",
     "faucet?/runtime-benchmarks",
