--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -24,6 +24,7 @@ bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git"
 assets = { path = "../pallets/assets", default-features = false }
 assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features = false}
 common = { path = "../common", default-features = false }
+ceres-governance-platform = { path = "../pallets/ceres-governance-platform", default-features = false }
 dex-api = { path = "../pallets/dex-api", default-features = false }
 dex-api-benchmarking = { path = "../pallets/dex-api/benchmarking", default-features = false, optional = true }
 dex-manager = { path = "../pallets/dex-manager", default-features = false }
@@ -125,6 +126,7 @@ std = [
     "bridge-multisig/std",
     "codec/std",
     "common/std",
+    "ceres-governance-platform/std",
     "dex-api/std",
     "dex-manager-runtime-api/std",
     "dex-manager/std",
@@ -201,6 +203,7 @@ private-net = [
 
 runtime-benchmarks = [
     "assets/runtime-benchmarks",
+    "ceres-governance-platform/runtime-benchmarks",
     "dex-api-benchmarking",
     "eth-bridge/runtime-benchmarks",
     "farming/runtime-benchmarks",
