--- a/node/chain_spec/Cargo.toml
+++ b/node/chain_spec/Cargo.toml
@@ -28,10 +28,15 @@ rewards = { path = "../../pallets/rewards" }
 technical = {path = "../../pallets/technical" }
 xor-fee = { path = "../../pallets/xor-fee" }
 
+[dev-dependencies]
+common = { path = "../../common", features = ["test"] }
+
 [features]
 include-real-files = []
 main-net-coded = []
-test = []
+test = [
+    "common/test"
+]
 
 private-net = [
     "faucet",
