--- a/pallets/ceres-launchpad/Cargo.toml
+++ b/pallets/ceres-launchpad/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 pool-xyk = { path = "../pool-xyk", default-features = false }
 pswap-distribution = { path = "../pswap-distribution", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
+technical = { path = "../technical" , default-features = false}
 hex-literal = "0.3.1"
 
 [dev-dependencies]
@@ -36,7 +37,7 @@ sp-io = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 pallet-balances = { version = "3" }
 permissions = { path = "../permissions" }
-technical = { path = "../technical" }
+technical = { path = "../technical", default-features = false }
 pswap-distribution = { path = "../pswap-distribution" }
 dex-manager = { path = "../dex-manager", default-features = false }
 
